# Puzzle.Helper

./: .gitignore  LICENSE  PIPELINE_MIGRATION.md  README.md  SOLVE.py  compose_img.py  config.json  detector_edges.py  detector_piece.py  example.py  main.py  match.py  match_mnb.py  nb_pieces.py  photoserror.txt  puzzle_detector.py  pyproject.toml  requirements.txt  run_pipeline.py  setup.py  solve144.py  test_preprocessing.ipynb
.old/: main.py
.old/oldoldsrc/: __init__.py
docs/: api.md
oldoldsrc/: matcher.py
oldsrc/: solve144.py  test_preprocessing.ipynb  utils.py
pipeline/: IMPROVEMENTS.md  README.md  __init__.py  config.py  main.py  matching.py  models.py  preprocessing.py
results/01_pieces/: missing_pieces.txt
src/: 01_detector_piece.py  01_single_pickle.py  02_detector_edges.py  02_detector_edges_interactive.py  03_matcher.py  README.md  SETUP.py  c_matcher.cop.py  c_matcher.py  classes.py  common.py  edges.py  image_processor.py  match.py  newutils.py  piece_detector.py  preprocessing.py  puzzle_solver.py  visualizer.py
src/old/: a_detector_piece.py  b_detector_edges.py  b_detector_edges_interactive.py  classes.py  myutils.py
src_classes/: edges.py
tests/: __init__.py  test_puzzle_solver.py
