[project]
name = "puzzle-helper"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "marimo>=0.18.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "opencv-contrib-python>=4.11.0.86",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "tqdm>=4.67.1",
]
